backend/test_final.txt
cargo :    Compiling hunyi-backend v0.1.0 (D:\SOLO-2\AI_solo_coder_task_B_146\b
ackend)
所在位置 行:1 字符: 88
+ ... d d:\SOLO-2\AI_solo_coder_task_B_146\backend; cargo test 2>&1 | Out-F ...
+                                                   ~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling hu..._B_146\backend) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `debug`
  --> src\alarm_ws.rs:12:34
   |
12 | use tracing::{error, info, warn, debug};
   |                                  ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `info`
 --> src\dtu_receiver.rs:5:29
  |
5 | use tracing::{debug, error, info, warn};
  |                             ^^^^

warning: unused import: `debug`
 --> src\pointing_analyzer.rs:8:34
  |
8 | use tracing::{error, info, warn, debug};
  |                                  ^^^^^

warning: unused import: `debug`
  --> src\transmission_simulator.rs:11:34
   |
11 | use tracing::{error, info, warn, debug};
   |                                  ^^^^^

error[E0369]: binary operation `!=` cannot be applied to type `InstrumentType`
   --> src\degradation_sim.rs:55:32
    |
 55 |     let is_ancient = inst_type != crate::models::InstrumentType::ModernEQ
;
    |                      --------- ^^ ---------------------------------------
 InstrumentType
    |                      |
    |                      InstrumentType
    |
note: an implementation of `PartialEq` might be missing for `InstrumentType`
   --> src\models.rs:343:1
    |
343 | pub enum InstrumentType {
    | ^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `InstrumentType` with `#[derive(PartialEq)]`
   --> src\models.rs:343:1
    |
343 + #[derive(PartialEq)]
344 | pub enum InstrumentType {
    |

error[E0369]: binary operation `!=` cannot be applied to type `InstrumentType`
   --> src\virtual_op.rs:130:32
    |
130 |     let is_ancient = inst_type != crate::models::InstrumentType::ModernEQ
;
    |                      --------- ^^ ---------------------------------------
 InstrumentType
    |                      |
    |                      InstrumentType
    |
note: an implementation of `PartialEq` might be missing for `InstrumentType`
   --> src\models.rs:343:1
    |
343 | pub enum InstrumentType {
    | ^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `InstrumentType` with `#[derive(PartialEq)]`
   --> src\models.rs:343:1
    |
343 + #[derive(PartialEq)]
344 | pub enum InstrumentType {
    |

warning: variable does not need to be mutable
  --> src\alarm_ws.rs:39:13
   |
39 |         let mut last = self.last_alarm_times.lock();
   |             ----^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `az_rad`
   --> src\pointing_analyzer.rs:103:13
    |
103 |         let az_rad = az * DEG_TO_RAD;
    |             ^^^^^^ help: if this is intentional, prefix it with an unders
core: `_az_rad`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by defau
lt

warning: unused variable: `flex`
   --> src\pointing_analyzer.rs:165:13
    |
165 |         let flex = Self::tube_flexure(t_el, 0.08);
    |             ^^^^ help: if this is intentional, prefix it with an undersco
re: `_flex`

For more information about this error, try `rustc --explain E0369`.
warning: `hunyi-backend` (bin "hunyi-backend" test) generated 7 warnings
error: could not compile `hunyi-backend` (bin "hunyi-backend" test) due to 2 pr
evious errors; 7 warnings emitted
